[fix] prevent horizontal scrolling on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 ol,
@@ -31,6 +32,11 @@ button {
   border: none;
   border-radius: 0;
   padding: 0;
+}
+
+input {
+  -webkit-appearance: none;
+  -webkit-border-radius: 0;
 }
 
 h1,
